# i-music

./: .gitignore  README.md  meson.build  org.dingjingmaster.music.json
data/: meson.build  org.dingjingmaster.music.appdata.xml.in  org.dingjingmaster.music.desktop.in  org.dingjingmaster.music.gschema.xml
po/: POTFILES  meson.build
src/: i_music-window.c  i_music-window.h  i_music-window.ui  i_music.gresource.xml  i_music_main.c  i_music_main.h  i_music_param.h  main.c  meson.build
src/ui/: i-music-main.ui  i_music_main.ui
